--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Write your HTML in this file -->
-< <!DOCTYPE html>
-
+<!DOCTYPE html>
+<html>
 <head>
 <title>Los Angeles Dodgers</title>
 
@@ -10,4 +10,4 @@
 <body>
 
 
->
+</html>
