--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html>
-<head>
+<head></head>
 <title>Los Angeles Dodgers</title>
 
 
 
 
-<body>
+<body></body>
 
 
 </html>
