--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html>
-<head></head>
-<title></title>
+<head><title>Baseball Is Better</title></head>
+
 
 
 
